--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
+    "antd": "^5.18.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "react-bootstrap": "^2.10.2"
+    "react-bootstrap": "^2.10.2",
+    "react-icons": "^5.2.1",
+    "react-router": "^6.23.1"
   }
 }
