--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap-icons": "^1.11.3",
     "react-bootstrap": "^2.10.2",
     "react-icons": "^5.2.1",
-    "react-router": "^6.23.1"
+    "react-router": "^6.23.1",
+    "react-router-dom": "^6.23.1"
   }
 }
