--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^5.18.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "framer-motion": "^11.2.10",
     "react-bootstrap": "^2.10.2",
     "react-icons": "^5.2.1",
     "react-router": "^6.23.1",
