--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
-    "antd": "^5.18.0",
+    "antd": "^5.18.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "dayjs": "^1.11.11",
     "react-bootstrap": "^2.10.2",
     "react-icons": "^5.2.1",
     "react-router": "^6.23.1",
