--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.18.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "kaboom": "^3000.1.17",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
