--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^11.2.10",
     "react-bootstrap": "^2.10.2",
     "react-icons": "^5.2.1",
+    "react-iframe": "^1.8.5",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1"
   }
