--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "framer-motion": "^11.2.10",
+    "kaplay": "^3000.1.17",
     "react-bootstrap": "^2.10.2",
     "react-icons": "^5.2.1",
     "react-router": "^6.23.1",
