--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -17,12 +17,15 @@
     "antd": "^5.18.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "framer-motion": "^11.2.10",
     "kaboom": "^3000.1.17",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
-    "react-router": "^6.23.1"
+    "react-iframe": "^1.8.5",
+    "react-router": "^6.23.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
