--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-iframe": "^1.8.5",
     "react-router": "^6.23.1",
