boton volver juego + ruta protegida juego-inicio sesion, hay que hacer localStorage.clear();

--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "framer-motion": "^11.2.10",
+    "jwt-decode": "^4.0.0",
     "kaboom": "^3000.1.17",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
